Minor UI and functional enhancements as well as stability improvements.
Improvements from the previous version.

* Only check for a new version if running in interactive mode.
* Changed pause to stop in UI.
* Allow deleting individual files and directories from the backup repository.
* Separate out starting backups and back up all files into two separate actions.
* Separate “Idle” status into “Idle” and “Stopped”.
* Indicate in UI that a file is deleted when restoring.

Fixes from the previous version.

* Fixed issue with upgrading on Linux stripping out required Java options.
* Fixed issue when repository upgrade failed.
* Fixed issues where directories would sometimes not disappear from backup even if empty.
* Removed LMDB limitation of not supporting path names longer than 500 characters.
* Fixed race-condition in logging backend.
* Fixed issue where old items in the file tree were not always removed when refreshed.

--- a/osx/Underscore Backup/Underscore Backup/Base.lproj/MainMenu.xib
+++ b/osx/Underscore Backup/Underscore Backup/Base.lproj/MainMenu.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -27,7 +28,7 @@
                         <action selector="configure:" target="Voe-Tx-rLC" id="LMG-Kb-CXA"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Pause" id="dgf-ha-xeQ">
+                <menuItem title="Stop" id="dgf-ha-xeQ">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="pauseItem:" target="Voe-Tx-rLC" id="TwS-LE-4No"/>
