Minor usability and stabilty enhancemnets
* Changed menu item in the taskbar to "Open...".
* Fixed issue with progress not being properly reported if validate block was run multiple times.
* Don't delete blocks because block refresh failed when writing new block.
* Tweaked how owner only access is set in Windows.

--- a/osx/Underscore Backup/Underscore Backup/Base.lproj/MainMenu.xib
+++ b/osx/Underscore Backup/Underscore Backup/Base.lproj/MainMenu.xib
@@ -23,7 +23,7 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu autoenablesItems="NO" id="Q5k-jH-vks">
             <items>
-                <menuItem title="Configure..." id="V4k-90-LhR">
+                <menuItem title="Open..." id="V4k-90-LhR">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="configure:" target="Voe-Tx-rLC" id="LMG-Kb-CXA"/>
